// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RepeatButton renders 1`] = `
<button data-cy="ctrl" class="btn atlantis-blue playbackCtrl melody-playbackCtrl melody-repeat"
role="button">
  <svg class="playbackCtrl__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
    <path d="M12 5V1L7 6l5 5V7c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6H4c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z"></path>
  </svg>
</button>
`;

exports[`RepeatButton renders with a active class if repeat is on 1`] = `
<button data-cy="ctrl" class="btn atlantis-blue playbackCtrl melody-playbackCtrl melody-repeat playbackCtrl--active melody-c-repeat-on"
role="button">
  <svg class="playbackCtrl__icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
    <path d="M12 5V1L7 6l5 5V7c3.31 0 6 2.69 6 6s-2.69 6-6 6-6-2.69-6-6H4c0 4.42 3.58 8 8 8s8-3.58 8-8-3.58-8-8-8z"></path>
  </svg>
</button>
`;
